--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -1,1 +1,6 @@
-<h1> <%= @user.first_name %> </h1>
+<h1> <%= @user.full_name %> </h1>
+<h2> <%=@user.username %></h2>
+<h3> Bio: </h3>
+<p> <%= @user.bio %></p>
+<%= button_to 'Edit', edit_user_path(@user), :method => :get %>
+<%= button_to 'Delete Account', { controller: :users, action: :destroy, id: @user.id }, method: :delete, data: { confirm: 'Are you sure?' } %>
