--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,20 @@
   </head>
 
   <body>
-    <%= yield %>
+  
+
+  <% if check_if_user_is_logged_in %>
+    <nav>
+      LOGGED IN AS: <%= @current_user.full_name %>
+      <%= button_to "Log Out", logout_path, method: :delete%>
+    </nav>
+  <% else %>
+    <nav>
+      <%= link_to "Log-In", login_path %>
+    </nav>
+  <% end %>
+
+  <%= yield %>
+
   </body>
 </html>
