--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -1,6 +1,6 @@
-<h1> <%= @user.full_name %> </h1>
-<h2> <%=@user.username %></h2>
+<h1> <%= @current_user.full_name %> </h1>
+<h2> <%=@current_user.username %></h2>
 <h3> Bio: </h3>
-<p> <%= @user.bio %></p>
-<%= button_to 'Edit', edit_user_path(@user), :method => :get %>
-<%= button_to 'Delete Account', { controller: :users, action: :destroy, id: @user.id }, method: :delete, data: { confirm: 'Are you sure?' } %>
+<p> <%= @current_user.bio %></p>
+<%= button_to 'Edit', edit_user_path(@current_user), :method => :get %>
+<%= button_to 'Delete Account', { controller: :users, action: :destroy, id: @current_user.id }, method: :delete, data: { confirm: 'Are you sure?' } %>
