--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,9 @@
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
-  <body>
+
+  <div class=”container">  
+    <body>
   
 
   <% if check_if_user_is_logged_in %>
@@ -23,7 +25,9 @@
     </nav>
   <% end %>
 
-  <%= yield %>
 
-  </body>
+      <%= yield %>
+
+    </body>
+  </div>
 </html>
