meeting update complete

--- a/app/views/meetings/newsubcat.erb
+++ b/app/views/meetings/newsubcat.erb
@@ -1,6 +1,5 @@
-<h1>Create a Meeting!</h1>
+<h1>Select Subcategory:</h1>
 
-<%# CAN WE DISPLAY SUBCATEGORIES BASED ON THE SPECIFIC CATEGORY?? %>
 
 <%= form_for @meeting do |f| %>
 <%= f.label :subcategory %> <%#this list is way too long. parse through category first.%>
@@ -14,4 +13,4 @@
 <%= f.submit "Create Meeting"%>
 <% end %>
 
-<%# datetime can be only be present day and forward .. Date.today??%> 
+<%# datetime can be only be present day and forward .. Date.today??%>
