--- a/app/views/users/edit.erb
+++ b/app/views/users/edit.erb
@@ -9,5 +9,7 @@
     <%= f.text_field :username %> <br>
     <%= f.label :bio %>
     <%= f.text_area :bio %> <br>
+    <%= f.label :password %>
+    <%= f.password_field :password %> <br>
     <%= f.submit "Update" %>
     <% end %>
