--- a/app/views/categories/index.erb
+++ b/app/views/categories/index.erb
@@ -4,7 +4,11 @@
     <%= category.name %>
     <ul>
     <% category.subcategories.map do |subcategory| %>
-        <li> <%= subcategory.name %> </li>
+        <li> <%= link_to subcategory.name, subcategory_path(subcategory) %> </li>
         <% end %>
     </ul>
 <% end %>
+
+#after clicking on the subcategory name they will be directed to the subcategory show page
+#display subcategory names and all the meetings associated
+#click on a specific meeting to register (Registation)
