fixing user show page link from meeting  and fixing password error messages

--- a/app/views/users/edit.erb
+++ b/app/views/users/edit.erb
@@ -9,7 +9,7 @@
     <%= f.text_field :username %> <br>
     <%= f.label :bio %>
     <%= f.text_area :bio %> <br>
-    <%= f.label :password %>
+    <%= f.label :please_enter_password_to_confirm %>
     <%= f.password_field :password %> <br>
     <%= f.submit "Update" %>
     <% end %>
