--- a/app/views/meetings/show.erb
+++ b/app/views/meetings/show.erb
@@ -6,7 +6,7 @@
 <p> When? <%= @meeting.time %>
 <p> Number of Attendees: <%= @meeting.users.count %>
 
-<p> <strong> Host: </strong> <%= link_to @meeting.user.full_name, user_path(@meeting.user.id) %> </p>
+<p> <strong> Host: </strong> <%= link_to @meeting.user.full_name, profile_path(@meeting.user.id) %> </p>
 
 <p> <strong> Description: </strong> <%= @meeting.description %> <br>
 
