--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,3 +16,6 @@
 
  // Custom bootstrap variables must be set or imported *before* bootstrap. 
  @import "bootstrap";
+.signup_link{
+    font-size: 20px;
+}
