--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -2,10 +2,24 @@
 <p><%= @error %></p>
 <% end %>
 
-    <%= form_tag "/send_form_here" do %>
-    <%= label_tag :username %>
-    <%= text_field_tag :username %><br>
-    <%= label_tag :password %>
-    <%= password_field_tag :password %>
-    <%= submit_tag "Login"%>
-<% end %>
+ <div class="row" id="form">
+    <div class="col-md-4 col-md-offset-4">
+      <%= form_for(:session, url: login_path) do |f|%>
+        <h1 class= "welcome">Welcome </h1>
+        <br>
+        <%#= render "users/error"%>
+        <div class="input-group">
+          <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
+          <%=f.text_field :username, placeholder: "Enter username", class: "form-control input-lg"%>
+        </div>
+        <br>
+        <div class="input-group">
+          <span class="input-group-addon"><i class="glyphicon glyphicon-lock "></i></span>
+          <%=f.password_field :password, placeholder: "Password",class:"form-control input-lg"%>
+        </div>
+        <br>
+        <%=f.submit "Log in", class: "btn-block btn-primary btn-lg"%>
+        <h6 class="signup_link">Not a member? <%=link_to "Sign up", signup_path%></h6>
+      <%end%>
+    </div>
+  </div>
