--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,12 +18,12 @@
     </div>
     <ul class="nav navbar-nav">
       <li class="active"><a href="#">About</a></li>
-      <li><a href="#">Explore Meetings</a></li>
-      <li><a href="#">Host a Meeting</a></li>
+      <li><a href="/categories/:id">Explore Meetings</a></li>
+      <li><a href="/meetings/new">Host a Meeting</a></li>
     </ul>
     <ul class="nav navbar-nav navbar-right">
-      <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
-      <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+      <li><a href="/signup"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+      <li><a href="/login"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
     </ul>
   </div>
 </nav>
