--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -2,14 +2,14 @@
 <p><%= @error %></p>
 <% end %>
 
- <div class="row" id="form">
+<div class="row" id="form">
     <div class="col-md-4 col-md-offset-4">
-      <%= form_for(:session, url: login_path) do |f|%>
+      <%= form_for(:user, url: handle_login_path) do |f|%>
         <h1 class= "welcome">Welcome </h1>
         <br>
         <%#= render "users/error"%>
         <div class="input-group">
-          <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
+          <span class="input-group-addon"><i class="glyphicon glyphicon-envelope"></i></span>
           <%=f.text_field :username, placeholder: "Enter username", class: "form-control input-lg"%>
         </div>
         <br>
