--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -4,7 +4,7 @@
 
  <div class="row" id="form">
     <div class="col-md-4 col-md-offset-4">
-      <%= form_for(:session, url: login_path) do |f|%>
+      <%= form_for(:user, url: handle_login_path) do |f|%>
         <h1 class= "welcome">Welcome </h1>
         <br>
         <%#= render "users/error"%>
