--- a/app/views/welcome/home.erb
+++ b/app/views/welcome/home.erb
@@ -1,23 +1,25 @@
 <html>
-    <body style="background-color:powderblue;" >
+    <body>
+        <%# <h1 style="text-align:center"> Welcome to Coterie </h1> %>
+        <div style="text-align:center;">
+            <img src="https://images.unsplash.com/photo-1517487881594-2787fef5ebf7?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&h=400&w=1200&q=200" style="width: 100%;"></img>
+        </div>
+            
+        <div class="col-md-8 col-md-offset-2" style="margin-top: 20px;">
+            <span>Browse Meeting Categories</span>
+        </div>
+        
+        <!-- <% unless @current_user %>
+        <div class="btn-group">
+            <%= link_to "<button>Login</button>".html_safe, '/login' %><br>
+            <br>
+            <%= link_to "<button>Signup</button>".html_safe, '/signup' %>
+        </div>
+        <% end %>
 
+        <% if @current_user %>
+            <%= link_to "<button>Manage Profile</button>".html_safe, user_path(@current_user) %>
+        <% end %> -->
 
-
-<h1 style="text-align:center"> Welcome to Coterie </h1>
-
-
-<% unless @current_user %>
-    <div class="btn-group">
-        <%= link_to "<button>Login</button>".html_safe, '/login' %><br>
-        <br>
-        <%= link_to "<button>Signup</button>".html_safe, '/signup' %>
-
-
-    </div>
-<% end %>
-
-<% if @current_user %>
-    <%= link_to "<button>Manage Profile</button>".html_safe, user_path(@current_user) %>
-<% end %>
-    
+    </body>
 </html>
