--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -35,6 +35,23 @@ body {
     font-family: 'Berkshire Swash', cursive;
 }
 
+.box {
+    text-align: center;
+    font-size: 24px;
+    line-height: 200px;
+    span {
+        color: #FFF;
+    }
+}
+
+.art {
+    background: url("https://images.unsplash.com/photo-1513364776144-60967b0f800f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&h=200&q=80");
+    box-shadow: inset 0 0 0 200px rgba(50,50,50,0.5);
+    background-size: cover;
+    background-repeat: no-repeat;
+    
+}
+
 .signup_link{
     font-size: 20px;
 }
