--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,7 +24,7 @@
         <ul class="nav navbar-nav navbar-right">
               <% if check_if_user_is_logged_in %>
               <li>
-                Logged In as: <%= @current_user.full_name %>
+                <%# Logged In as: <%= @current_user.full_name %>
                 <%= link_to "Log Out", logout_path, method: :delete%>
               </li>
               <% else %>
@@ -41,19 +41,7 @@
       </div>
     </nav>
 
-<!--     <% if check_if_user_is_logged_in %>
-    <nav>
-      Logged In as: <%= @current_user.full_name %>
-      <%= button_to "Log Out", logout_path, method: :delete%>
-    </nav>
-    <% else %>
-    <nav>
-      <%= link_to "Log-In", login_path %>
-      </nav>
-    <% end %> -->
-
     <%= yield %>
     
-
   </body>
 </html>
