--- a/app/views/welcome/home.erb
+++ b/app/views/welcome/home.erb
@@ -5,8 +5,18 @@
             <img src="https://images.unsplash.com/photo-1517487881594-2787fef5ebf7?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&h=400&w=1200&q=200" style="width: 100%;"></img>
         </div>
             
-        <div class="col-md-8 col-md-offset-2" style="margin-top: 20px;">
-            <span>Browse Meeting Categories</span>
+        <div class="col-md-8 col-md-offset-2" style="padding: 20px 0px; margin-bottom: 100px;">
+            <h2>Browse Meeting Categories</h2>
+            <div class="row flex" style="width: 100%; height: 200px;">
+                <div class="col-md-4 box art"><span>Art</span></div>
+                <div class="col-md-4 box">Music</div>
+                <div class="col-md-4 box">Games</div>
+            </div>
+            <div class="row flex" style="width: 100%; height: 200px;">
+                <div class="col-md-4 box">Category 4</div>
+                <div class="col-md-4 box">Category 5</div>
+                <div class="col-md-4 box">Category 6</div>
+            </div>
         </div>
         
         <!-- <% unless @current_user %>
