--- a/app/views/welcome/home.erb
+++ b/app/views/welcome/home.erb
@@ -8,14 +8,34 @@
         <div class="col-md-8 col-md-offset-2" style="padding: 20px 0px; margin-bottom: 100px;">
             <h2>Browse Meeting Categories</h2>
             <div class="row flex" style="width: 100%; height: 200px;">
-                <div class="col-md-4 box art"><span>Art</span></div>
-                <div class="col-md-4 box">Music</div>
-                <div class="col-md-4 box">Games</div>
+                <div class="col-md-3 box art"><span>Arts & Culture</span></div>
+                <div class="col-md-3 box book"><span>Book Clubs</span></div>
+                <div class="col-md-3 box career"><span>Career & Business</span></div>
+                <div class="col-md-3 box education"><span>Education & Learning</span></div>
             </div>
             <div class="row flex" style="width: 100%; height: 200px;">
-                <div class="col-md-4 box">Category 4</div>
-                <div class="col-md-4 box">Category 5</div>
-                <div class="col-md-4 box">Category 6</div>
+                <div class="col-md-3 box fashion"><span>Fashion & Beauty</span></div>
+                <div class="col-md-3 box food"><span>Food & Drink</span></div>
+                <div class="col-md-3 box game"><span>Games</span></div>
+                <div class="col-md-3 box health"><span>Health & Wellbeing</span></div>
+            </div>
+            <div class="row flex" style="width: 100%; height: 200px;">
+                <div class="col-md-3 box hobbie"><span>Hobbies & Crafts</span></div>
+                <div class="col-md-3 box lgbt"><span>LGBT</span></div>
+                <div class="col-md-3 box language"><span>Lang & Ethnic Indentity</span></div>
+                <div class="col-md-3 box politics"><span>Movements & Politics</span></div>
+            </div>
+            <div class="row flex" style="width: 100%; height: 200px;">
+                <div class="col-md-3 box movie"><span>Movies & Film</span></div>
+                <div class="col-md-3 box music"><span>Music</span></div>
+                <div class="col-md-3 box outdoor"><span>Outdoor Adventure</span></div>
+                <div class="col-md-3 box parent"><span>Parents & Family</span></div>
+            </div>
+            <div class="row flex" style="width: 100%; height: 200px;">
+                <div class="col-md-3 box"><span>Pets & Animals</span></div>
+                <div class="col-md-3 box"><span>Socializing</span></div>
+                <div class="col-md-3 box"><span>Support</span></div>
+                <div class="col-md-3 box"><span>Writing</span></div>
             </div>
         </div>
         
