--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -37,7 +37,8 @@ body {
 
 .box {
     text-align: center;
-    font-size: 24px;
+    border-width: 2px;
+    font-size: 18px;
     line-height: 200px;
     span {
         color: #FFF;
@@ -45,12 +46,143 @@ body {
 }
 
 .art {
+    background: url("https://images.unsplash.com/photo-1580060405691-3329f19f6979?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&h=200&q=80");
+    box-shadow: inset 0 0 0 200px rgba(50,50,50,0.5);
+    background-size: cover;
+    background-repeat: no-repeat;
+    
+}
+
+.book {
+    background: url("https://images.unsplash.com/photo-1529158062015-cad636e205a0?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&h=200&q=80");
+    box-shadow: inset 0 0 0 200px rgba(50,50,50,0.5);
+    background-size: cover;
+    background-repeat: no-repeat;
+    
+}
+
+.career {
     background: url("https://images.unsplash.com/photo-1513364776144-60967b0f800f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&h=200&q=80");
     box-shadow: inset 0 0 0 200px rgba(50,50,50,0.5);
     background-size: cover;
     background-repeat: no-repeat;
     
 }
+
+.education {
+    background: url("https://images.unsplash.com/photo-1513364776144-60967b0f800f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&h=200&q=80");
+    box-shadow: inset 0 0 0 200px rgba(50,50,50,0.5);
+    background-size: cover;
+    background-repeat: no-repeat;
+    
+}
+
+.fashion {
+    background: url("https://images.unsplash.com/photo-1513364776144-60967b0f800f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&h=200&q=80");
+    box-shadow: inset 0 0 0 200px rgba(50,50,50,0.5);
+    background-size: cover;
+    background-repeat: no-repeat;
+    
+}
+
+.food {
+    background: url("https://images.unsplash.com/photo-1513364776144-60967b0f800f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&h=200&q=80");
+    box-shadow: inset 0 0 0 200px rgba(50,50,50,0.5);
+    background-size: cover;
+    background-repeat: no-repeat;
+    
+}
+
+.game {
+    background: url("https://images.unsplash.com/photo-1513364776144-60967b0f800f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&h=200&q=80");
+    box-shadow: inset 0 0 0 200px rgba(50,50,50,0.5);
+    background-size: cover;
+    background-repeat: no-repeat;
+    
+}
+
+.health {
+    background: url("https://images.unsplash.com/photo-1513364776144-60967b0f800f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&h=200&q=80");
+    box-shadow: inset 0 0 0 200px rgba(50,50,50,0.5);
+    background-size: cover;
+    background-repeat: no-repeat;
+    
+}
+
+.hobbie {
+    background: url("https://images.unsplash.com/photo-1513364776144-60967b0f800f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&h=200&q=80");
+    box-shadow: inset 0 0 0 200px rgba(50,50,50,0.5);
+    background-size: cover;
+    background-repeat: no-repeat;
+    
+}
+
+
+.lgbt {
+    background: url("https://images.unsplash.com/photo-1513364776144-60967b0f800f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&h=200&q=80");
+    box-shadow: inset 0 0 0 200px rgba(50,50,50,0.5);
+    background-size: cover;
+    background-repeat: no-repeat;
+    
+}
+
+
+.language {
+    background: url("https://images.unsplash.com/photo-1513364776144-60967b0f800f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&h=200&q=80");
+    box-shadow: inset 0 0 0 200px rgba(50,50,50,0.5);
+    background-size: cover;
+    background-repeat: no-repeat;
+    
+}
+
+
+.politics {
+    background: url("https://images.unsplash.com/photo-1513364776144-60967b0f800f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&h=200&q=80");
+    box-shadow: inset 0 0 0 200px rgba(50,50,50,0.5);
+    background-size: cover;
+    background-repeat: no-repeat;
+    
+}
+
+
+.movie {
+    background: url("https://images.unsplash.com/photo-1513364776144-60967b0f800f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&h=200&q=80");
+    box-shadow: inset 0 0 0 200px rgba(50,50,50,0.5);
+    background-size: cover;
+    background-repeat: no-repeat;
+    
+}
+
+
+.music {
+    background: url("https://images.unsplash.com/photo-1513364776144-60967b0f800f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&h=200&q=80");
+    box-shadow: inset 0 0 0 200px rgba(50,50,50,0.5);
+    background-size: cover;
+    background-repeat: no-repeat;
+    
+}
+
+
+.outdoor {
+    background: url("https://images.unsplash.com/photo-1513364776144-60967b0f800f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&h=200&q=80");
+    box-shadow: inset 0 0 0 200px rgba(50,50,50,0.5);
+    background-size: cover;
+    background-repeat: no-repeat;
+    
+}
+
+
+.parent {
+    background: url("https://images.unsplash.com/photo-1513364776144-60967b0f800f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&h=200&q=80");
+    box-shadow: inset 0 0 0 200px rgba(50,50,50,0.5);
+    background-size: cover;
+    background-repeat: no-repeat;
+    
+}
+
+
+
+
 
 .signup_link{
     font-size: 20px;
