--- a/app/views/welcome/home.erb
+++ b/app/views/welcome/home.erb
@@ -6,7 +6,7 @@
         </div>
             
         <div class="col-md-8 col-md-offset-2" style="padding: 20px 0px; margin-bottom: 100px;">
-            <h2>Browse Meeting Categories</h2>
+            <h2>Popular Meeting Categories</h2>
             <div class="row flex" style="width: 100%; height: 200px;">
                 <div class="col-md-3 box art"><span>Arts & Culture</span></div>
                 <div class="col-md-3 box book"><span>Book Clubs</span></div>
