--- a/app/views/registrations/new.erb
+++ b/app/views/registrations/new.erb
@@ -8,5 +8,5 @@
 <%= form_for @registration do |f| %>
     <%= f.hidden_field :meeting_id, :value => @meeting.id %>
     <%= f.hidden_field :user_id, :value => @current_user.id %>
-    <%= f.submit "Register!" %>
+    <%= f.submit "Confirm Registeration" %>
 <% end %>
