--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -20,6 +20,10 @@
 
 body {
     font-family: Arial;
+    background-image: url("https://images.unsplash.com/photo-1527903868760-c4e2f19b68c0?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1500&q=80");
+    // box-shadow: inset 0 0 0 200px rgba(50,50,50,0.5);
+    background-size: 50vm 50vh;
+    background-repeat: no-repeat;
 }
 
 .navbar {
@@ -154,31 +158,31 @@ body {
 }
 
 
-.music {
-    background: url("https://images.unsplash.com/photo-1513364776144-60967b0f800f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&h=200&q=80");
-    box-shadow: inset 0 0 0 200px rgba(50,50,50,0.5);
-    background-size: cover;
-    background-repeat: no-repeat;
+// .music {
+//     background: url("https://images.unsplash.com/photo-1513364776144-60967b0f800f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&h=200&q=80");
+//     box-shadow: inset 0 0 0 200px rgba(50,50,50,0.5);
+//     background-size: cover;
+//     background-repeat: no-repeat;
     
-}
+// }
 
 
-.outdoor {
-    background: url("https://images.unsplash.com/photo-1513364776144-60967b0f800f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&h=200&q=80");
-    box-shadow: inset 0 0 0 200px rgba(50,50,50,0.5);
-    background-size: cover;
-    background-repeat: no-repeat;
+// .outdoor {
+//     background: url("https://images.unsplash.com/photo-1513364776144-60967b0f800f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&h=200&q=80");
+//     box-shadow: inset 0 0 0 200px rgba(50,50,50,0.5);
+//     background-size: cover;
+//     background-repeat: no-repeat;
     
-}
+// }
 
 
-.parent {
-    background: url("https://images.unsplash.com/photo-1513364776144-60967b0f800f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&h=200&q=80");
-    box-shadow: inset 0 0 0 200px rgba(50,50,50,0.5);
-    background-size: cover;
-    background-repeat: no-repeat;
+// .parent {
+//     background: url("https://images.unsplash.com/photo-1513364776144-60967b0f800f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&h=200&q=80");
+//     box-shadow: inset 0 0 0 200px rgba(50,50,50,0.5);
+//     background-size: cover;
+//     background-repeat: no-repeat;
     
-}
+// }
 
 
 
