--- a/app/views/users/new.erb
+++ b/app/views/users/new.erb
@@ -1,5 +1,3 @@
-<h1> Form for New User </h1>
-
 <% if @errors %>
 <ul>
     <% @errors.each do |error| %>
@@ -8,14 +6,34 @@
 </ul>
 <% end%>
 
-<%= form_for @user do |f| %>
-    <%= f.label :first_name %>
-    <%= f.text_field :first_name %> <br>
-    <%= f.label :last_name %>
-    <%= f.text_field :last_name %> <br>
-    <%= f.label :username %>
-    <%= f.text_field :username %> <br>
-    <%= f.label :password %>
-    <%= f.password_field :password %> <br>
-    <%= f.submit "Create Account!" %>
-    <% end %>
+<div class="row" id="form">
+    <div class="col-md-4 col-md-offset-4">
+      <%= form_for(:user, url: signup_path) do |f|%>
+        <h1 class= "welcome">Signup </h1>
+        <br>
+        <%#= render "users/error"%>
+        <div class="input-group">
+          <span class="input-group-addon"><i class="glyphicon glyphicon-envelope"></i></span>
+          <%=f.text_field :first_name, placeholder: "First Name", class: "form-control input-lg"%>
+        </div>
+        <br>
+        <div class="input-group">
+          <span class="input-group-addon"><i class="glyphicon glyphicon-envelope"></i></span>
+          <%=f.text_field :last_name, placeholder: "Last Name", class: "form-control input-lg"%>
+        </div>
+        <br>
+        <div class="input-group">
+          <span class="input-group-addon"><i class="glyphicon glyphicon-envelope"></i></span>
+          <%=f.text_field :username, placeholder: "Enter username", class: "form-control input-lg"%>
+        </div>
+        <br>
+        <div class="input-group">
+          <span class="input-group-addon"><i class="glyphicon glyphicon-lock "></i></span>
+          <%=f.password_field :password, placeholder: "Password",class:"form-control input-lg"%>
+        </div>
+        <br>
+        <%=f.submit "Signup", class: "btn-block btn-primary btn-lg"%>
+       
+      <%end%>
+    </div>
+  </div>
