--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -27,9 +27,18 @@ h2 {
     color: inherit;
 }
 
+
 body {
     font-family: Arial;
+    background-image: url("https://images.unsplash.com/photo-1536882240095-0379873feb4e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1351&q=80");
+    // box-shadow: inset 0 0 0 200px rgba(50,50,50,0.5);
+    background-size: 50vm 50vh;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position: center;
 }
+
+
 
 .navbar {
     background-color: #FFF;
@@ -207,3 +216,5 @@ body {
     border-bottom: 1px solid #333333;
     border-left: 1px solid #CCCCCC;
   }
+
+  
