--- a/app/views/categories/index.erb
+++ b/app/views/categories/index.erb
@@ -1,11 +1,14 @@
-<h1> What are you interested in? </h1>
+
+<div class="container-fluid">
+<h2> What are you interested in? </h2>
 
 <% @categories.map do |category| %>
-    <%= category.name %>
+    <h3><%= category.name %></h3>
     <ul>
     <% category.subcategories.map do |subcategory| %>
         <li> <%= link_to subcategory.name, subcategory_path(subcategory) %> </li>
         <% end %>
     </ul>
 <% end %>
+</div>
 
