--- a/app/views/subcategories/show.erb
+++ b/app/views/subcategories/show.erb
@@ -1,7 +1,10 @@
-<h1> <%= @subcategory.name %> </h1>
+
+<div class="container-fluid">
+<h3> <%= @subcategory.name %> </h3>
 
 <ul>
     <% @meetings.each do |meeting| %>
         <li> <%= link_to meeting.title, meeting_path(meeting) %> - <%= meeting.datetime %> </li>
     <% end %>
 </ul>
+</div>
