--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -5,7 +5,7 @@
  <div class="row" id="form">
     <div class="col-md-4 col-md-offset-4">
       <%= form_for(:user, url: handle_login_path) do |f|%>
-        <h1 class= "welcome">Welcome </h1>
+        <h1 class= "welcome">Welcome Back!</h1>
         <br>
         <%#= render "users/error"%>
         <div class="input-group">
