--- a/app/views/users/profile.erb
+++ b/app/views/users/profile.erb
@@ -1,4 +1,6 @@
-<h1> <%= @user.full_name %> </h1>
-<h2> <%=@user.username %></h2>
-<h3> Bio: </h3>
+<div class="container-fluid">
+<h2> <%= @user.full_name %> </h2>
+<h3> Username: <%=@user.username %></h3>
+<h3> About Me: </h3>
 <p> <%= @user.bio %></p>
+</div>
