--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -1,6 +1,8 @@
-<h1> <%= @current_user.full_name %> </h1>
-<h2> <%=@current_user.username %></h2>
-<h3> Bio: </h3>
+<div class="container-fluid">
+<h2> <%= @current_user.full_name %> </h2>
+<h4> Username: <%=@current_user.username %></h4>
+<h4> About Me: </h4>
 <p> <%= @current_user.bio %></p>
 <%= button_to 'Edit', edit_user_path(@current_user), :method => :get %>
 <%= button_to 'Delete Account', { controller: :users, action: :destroy, id: @current_user.id }, method: :delete, data: { confirm: 'Are you sure?' } %>
+</div>
