--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,10 +18,10 @@
         </div>
         <ul class="nav navbar-nav">
           <li class="active"><a href="#">About</a></li>
-          <li><a href="/users/:user_id/meetings">My Meetings</a></li>
           <li><a href="/users/:id">Profile</a></li>
-          <li><a href="/categories">Register for Meetings</a></li>
-          <li><a href="/meetings/new">Host Meetings</a></li>
+          <li><a href="/users/:user_id/meetings">My Meetings</a></li>
+          <li><a href="/categories">Register for a Meeting</a></li>
+          <li><a href="/meetings/new">Host a Meeting</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
               <% if check_if_user_is_logged_in %>
