--- a/app/views/welcome/home.erb
+++ b/app/views/welcome/home.erb
@@ -2,11 +2,11 @@
     <body>
         <%# <h1 style="text-align:center"> Welcome to Coterie </h1> %>
         <div style="text-align:center;">
-            <img src="https://images.unsplash.com/photo-1517487881594-2787fef5ebf7?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&h=400&w=1200&q=200" style="width: 100%;"></img>
+            <img src="https://images.unsplash.com/photo-1490111718993-d98654ce6cf7?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&h=320&w=1200&q=200" style="width: 100%;"></img>
         </div>
             
         <div class="col-md-8 col-md-offset-2" style="padding: 50px 0px; margin-bottom: 100px;">
-            <h2>Browse Popular Categories</h2>
+            <h2>🔎 Browse Popular Categories  </h2>
             <div class="row flex" style="width: 100%; height: 200px;">
                 <div class="col-md-3 box art"><span>Arts & Culture</span></div>
                 <div class="col-md-3 box book"><span>Book Clubs</span></div>
@@ -30,12 +30,6 @@
                 <div class="col-md-3 box music"><span>Music</span></div>
                 <div class="col-md-3 box outdoor"><span>Outdoor Adventure</span></div>
                 <div class="col-md-3 box parent"><span>Parents & Family</span></div>
-            </div>
-            <div class="row flex" style="width: 100%; height: 200px;">
-                <div class="col-md-3 box"><span>Pets & Animals</span></div>
-                <div class="col-md-3 box"><span>Socializing</span></div>
-                <div class="col-md-3 box"><span>Support</span></div>
-                <div class="col-md-3 box"><span>Writing</span></div>
             </div>
         </div>
         
