--- a/app/views/welcome/home.erb
+++ b/app/views/welcome/home.erb
@@ -22,7 +22,7 @@
             <div class="row flex" style="width: 100%; height: 200px;">
                 <div class="col-md-3 box hobbie"><span>Hobbies & Crafts</span></div>
                 <div class="col-md-3 box lgbt"><span>LGBT</span></div>
-                <div class="col-md-3 box language"><span>Lang & Ethnic Indentity</span></div>
+                <div class="col-md-3 box language"><span>Lang & Ethnic Identity</span></div>
                 <div class="col-md-3 box politics"><span>Movements & Politics</span></div>
             </div>
             <div class="row flex" style="width: 100%; height: 200px;">
