--- a/app/views/meetings/index.erb
+++ b/app/views/meetings/index.erb
@@ -1,20 +1,24 @@
-<h2>Hi <%= @current_user.first_name %>, Here are all of your meetings: </h2>
+<div class="meetings">
 
-<div>
-    <p> Meetings I'm hosting: </p>
-    <ul>
-    <% @meetings.each do |meeting| %>
-        <% if meeting.user == @current_user %>
-            <li> Title: <%= link_to meeting.title, edit_meeting_path(@current_user, meeting) %> - When? <%= meeting.datetime %><br></li>
-        <% end %>
-    <% end %>
-    </ul>
-</div>
-<div>
-    <p> Meetings I'm attending: </p>
-    <ul>
-        <% @registrations.each do |registration| %>
-        <li> Title: <%= link_to registration.meeting.title, edit_registration_path(@current_user, registration) %> - When? <%= registration.meeting.datetime %><br></li>
-        <% end %>
-    </ul>
+        <h2>Hi <%= @current_user.first_name %>, Here are all of your meetings: </h2>
+
+        <div>
+            <h3> Meetings I'm hosting: </h3>
+            <ul>
+            <% @meetings.each do |meeting| %>
+                <% if meeting.user == @current_user %>
+                    <li> Title: <%= link_to meeting.title, edit_meeting_path(@current_user, meeting) %> - When? <%= meeting.datetime %><br></li>
+                <% end %>
+            <% end %>
+            </ul>
+        </div>
+        <div>
+            <h3> Meetings I'm attending: </h3>
+            <ul>
+                <% @registrations.each do |registration| %>
+                <li> Title: <%= link_to registration.meeting.title, edit_registration_path(@current_user, registration) %> - When? <%= registration.meeting.datetime %><br></li>
+                <% end %>
+            </ul>
+        </div>
+
 </div>
