--- a/app/views/categories/index.erb
+++ b/app/views/categories/index.erb
@@ -2,7 +2,7 @@
 <div class="categories">
 
     <div class="title">
-        <p> What are you interested in? </p>
+        <h2> What are you interested in? </h2>
     </div>
 
     <div class="table">
@@ -21,4 +21,3 @@
 
 
 </div>
-
