--- a/app/views/meetings/show.erb
+++ b/app/views/meetings/show.erb
@@ -1,6 +1,6 @@
 
 
-<div class="container-fluid">
+<div class="user-show">
 
 <h2><strong><%= @meeting.title %> </strong> </h2>
 <p><strong>Category: </strong><%= @meeting.category.name %></p>
