--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -22,7 +22,7 @@
 .meetings {
     margin-left: 15%;
     margin-top: 5%;
-    background-color: #b4ffd5;
+    background-color: #fefebe;
     padding: 40px;
     padding-left: 40px;
     width: 900px;
@@ -36,7 +36,7 @@
 }
 
 .table {
-    display: flex;
+    // display: flex;
     width: 90%;
 }
 tr {
@@ -44,7 +44,7 @@ tr {
 }
 
 td {
-    border: solid;
+    border: none;
     border-width: thin;
     padding-left: 5px;
     padding-right: 5px;
@@ -60,10 +60,30 @@ ul {
     list-style: none;
 }
 
+.text-area {
+    width: 450px;
+    height: 200px;
+    outline: none;
+}
+
+.text-field {
+    width: 450px;
+    outline:none;
+}
+
 .user-show {
     margin-left: 20%;
     margin-top: 5%;
-    background-color: #f2e5e5;
+    background-color: #ffffff;
+    padding: 40px;
+    padding-left: 40px;
+    width: 700px;
+}
+
+.user-profile {
+    margin-left: 20%;
+    margin-top: 5%;
+    background-color: #ffe7e7;
     padding: 40px;
     padding-left: 40px;
     width: 700px;
@@ -79,7 +99,7 @@ ul {
 
 .buttonTo:hover {
     color: #FFFFFF;
-    background-color: #ce4820;
+    background-color: #b5b5b5;
     // transition: all 0.2s;
 }
 
@@ -95,8 +115,7 @@ h2 {
 body {
     font-family: Arial;
     font-size: 18px;
-
-    // background-image: url("https://images.unsplash.com/photo-1536882240095-0379873feb4e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1351&q=80");
+    background-image: url("https://images.unsplash.com/photo-1596367407372-96cb88503db6?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80");
     // box-shadow: inset 0 0 0 200px rgba(50,50,50,0.5);
     background-size: cover;
     background-repeat: no-repeat;
@@ -108,12 +127,13 @@ body {
 
 
 .navbar {
-    background-color: #FFF;
+    background-color: #ffffff;
     font-size: 16px;
+    border: none;
 }
 
 .navbar-default .navbar-brand {
-    color: #000;
+    color: rgb(53, 53, 53);
     font-size: 32px;
 }
 
@@ -121,11 +141,18 @@ body {
     font-family: 'Berkshire Swash', cursive;
 }
 
+
+.banner {
+    margin-top: 0;
+}
+
 .box {
     text-align: center;
     border-width: 2px;
     font-size: 18px;
     line-height: 200px;
+    margin-left: 10px;
+    margin-bottom: 10px;
     span {
         color: #FFF;
     }
