--- a/app/views/users/profile.erb
+++ b/app/views/users/profile.erb
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<div class="user-profile ">
 <h2> <%= @user.full_name %> </h2>
 <h3> Username: <%=@user.username %></h3>
 <h3> About Me: </h3>
