--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -1,4 +1,4 @@
-<div class="user-show">
+<div class="user-profile ">
 <h2> <%= @current_user.full_name %> </h2>
 <h4> Username: <%=@current_user.username %></h4>
 <h4> About Me: </h4>
