--- a/app/views/welcome/home.erb
+++ b/app/views/welcome/home.erb
@@ -1,34 +1,43 @@
 <html>
     <body>
         <%# <h1 style="text-align:center"> Welcome to Coterie </h1> %>
-        <div style="text-align:center;">
-            <img src="https://images.unsplash.com/photo-1490111718993-d98654ce6cf7?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&h=320&w=1200&q=200" style="width: 100%;"></img>
+        <div class="banner" style="text-align:center;">
+            <img src="https://images.unsplash.com/photo-1490111718993-d98654ce6cf7?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&h=320&w=1200&q=200" style="width: 100%; height: 40%;"></img>
         </div>
             
-        <div class="col-md-8 col-md-offset-2" style="padding: 50px 0px; margin-bottom: 100px;">
+        <div class="col-lg-12 col-lg-offset-1" style="padding: 30px 0px; margin-bottom: 100px;">
             <h2>🔎 Browse Popular Categories  </h2>
             <div class="row flex" style="width: 100%; height: 200px;">
                 <div class="col-md-3 box art"><span>Arts & Culture</span></div>
                 <div class="col-md-3 box book"><span>Book Clubs</span></div>
-                <div class="col-md-3 box career"><span>Career & Business</span></div>
-                <div class="col-md-3 box education"><span>Education & Learning</span></div>
+                <div class="col-md-3 box career"><span>Career & Business</span></div>   
             </div>
+
             <div class="row flex" style="width: 100%; height: 200px;">
+                <div class="col-md-3 box education"><span>Education & Learning</span></div>
                 <div class="col-md-3 box fashion"><span>Fashion & Beauty</span></div>
                 <div class="col-md-3 box food"><span>Food & Drink</span></div>
+            </div>
+
+            <div class="row flex" style="width: 100%; height: 200px;">
                 <div class="col-md-3 box game"><span>Games</span></div>
                 <div class="col-md-3 box health"><span>Health & Wellbeing</span></div>
-            </div>
-            <div class="row flex" style="width: 100%; height: 200px;">
                 <div class="col-md-3 box hobbie"><span>Hobbies & Crafts</span></div>
+            </div>
+
+            <div class="row flex" style="width: 100%; height: 200px;">
                 <div class="col-md-3 box lgbt"><span>LGBT</span></div>
                 <div class="col-md-3 box language"><span>Lang & Ethnic Identity</span></div>
                 <div class="col-md-3 box politics"><span>Movements & Politics</span></div>
             </div>
+
             <div class="row flex" style="width: 100%; height: 200px;">
                 <div class="col-md-3 box movie"><span>Movies & Film</span></div>
                 <div class="col-md-3 box music"><span>Music</span></div>
                 <div class="col-md-3 box outdoor"><span>Outdoor Adventure</span></div>
+            </div>
+
+            <div class="row flex" style="width: 100%; height: 200px;">
                 <div class="col-md-3 box parent"><span>Parents & Family</span></div>
             </div>
         </div>
