--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -80,6 +80,15 @@ ul {
     width: 700px;
 }
 
+.edit-profile {
+    margin-left: 20%;
+    margin-top: 5%;
+    background-color: #bfffea;
+    padding: 40px;
+    padding-left: 40px;
+    width: 700px;
+}
+
 .user-profile {
     margin-left: 20%;
     margin-top: 5%;
@@ -111,6 +120,13 @@ h2 {
     color: inherit;
 }
 
+h3 {
+    font-size: 25px;
+    font-family: Bebas Neue;
+    font-weight: 500;
+    line-height: 1.1;
+    color: inherit;
+}
 
 body {
     font-family: Arial;
