--- a/app/views/meetings/edit.erb
+++ b/app/views/meetings/edit.erb
@@ -2,7 +2,7 @@
 
 <div class="user-show">
 
-        <h2> Edit a Meeting </h2>
+        <h2> Edit a Meeting ✏️</h2>
 
         <%= form_for([@meeting.user, @meeting]) do |f| %>
         <%= f.hidden_field :user_id, :value => @current_user.id %>
