--- a/app/views/users/profile.erb
+++ b/app/views/users/profile.erb
@@ -1,6 +1,6 @@
 <div class="user-profile ">
-<h2> <%= @user.full_name %> </h2>
-<h3> Username: <%=@user.username %></h3>
-<h3> About Me: </h3>
-<p> <%= @user.bio %></p>
+    <h2>👤 <%= @user.full_name %> </h2>
+    <h3> Username: <%=@user.username %></h3>
+    <h3> About Me: </h3>
+    <p> <%= @user.bio %></p>
 </div>
