--- a/app/views/users/edit.erb
+++ b/app/views/users/edit.erb
@@ -1,15 +1,35 @@
-<h1> Edit <%= @current_user.full_name%>'s Profile </h1>
+<div class="edit-profile">
 
-<%= form_for @current_user do |f| %>
-    <%= f.label :first_name %>
-    <%= f.text_field :first_name %> <br>
-    <%= f.label :last_name %>
-    <%= f.text_field :last_name %> <br>
-    <%= f.label :username %>
-    <%= f.text_field :username %> <br>
-    <%= f.label :bio %>
-    <%= f.text_area :bio %> <br>
-    <%= f.label :please_enter_password_to_confirm %>
-    <%= f.password_field :password %> <br>
-    <%= f.submit "Update" %>
-    <% end %>
+    <h2>Edit <%= @current_user.full_name%>'s Profile ✏️</h2>
+
+    <%= form_for @current_user do |f| %>
+
+    <div class="input-group">
+        <%= f.label "First Name:" %><br>
+        <%= f.text_field :first_name %> <br><br>
+    </div>
+
+    <div class="input-group">
+        <%= f.label "Last Name:" %><br>
+        <%= f.text_field :last_name %> <br><br>
+    </div>
+
+    <div class="input-group">
+        <%= f.label "Username:" %><br>
+        <%= f.text_field :username %> <br><br>
+    </div>
+
+    <div class="input-group">
+        <%= f.label "Bio:" %><br>
+        <%= f.text_area :bio %> <br><br>
+    </div>
+
+    <div class="input-group">
+        <%= f.label "Please enter password_to confirm:" %><br>
+        <%= f.password_field :password %> <br><br>
+    </div>
+
+        <%= f.submit "Update" %>
+        <% end %>
+
+</div>
