--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -1,7 +1,7 @@
 <div class="user-profile ">
-<h2> <%= @current_user.full_name %> </h2>
-<h4> Username: <%=@current_user.username %></h4>
-<h4> About Me: </h4>
+<h2>👤 <%= @current_user.full_name %> </h2>
+<h4> <b>Username: </b> <%=@current_user.username %></h4>
+<h4> <b>About Me:</b> </h4>
 <p> <%= @current_user.bio %></p>
 <%= button_to 'Edit', edit_user_path(@current_user), :method => :get, :class => "buttonTo" %>
 <%= button_to 'Delete Account', { controller: :users, action: :destroy, id: @current_user.id }, method: :delete, data: { confirm: 'Are you sure?' }, :class => "buttonTo" %>
